--- a/.github/workflows/cmiot_ax18_plus.yml
+++ b/.github/workflows/cmiot_ax18_plus.yml
@@ -20,10 +20,10 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/sdf8057/ipq6000.git
+  REPO_URL: https://github.com/8688Add/ipq6000.git
   REPO_BRANCH: main
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: ./config/cmiot_ax18/.config
+  CONFIG_FILE: ./config/cmiot_ax18/prowifi.config
   DIY_P1_SH: ./custom/cmiot_ax18/plus/diy-part1.sh
   DIY_P2_SH: ./custom/cmiot_ax18/plus/diy-part2.sh
   UPLOAD_BIN_DIR: false
