--- a/config/qihoo_360v6/qihoo_360v6_basic.config
+++ b/config/qihoo_360v6/qihoo_360v6_basic.config
@@ -44,7 +44,7 @@ CONFIG_PACKAGE_dns2socks=y
 CONFIG_PACKAGE_dns2tcp=y
 CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_htop=y
-CONFIG_PACKAGE_haproxy=y
+# CONFIG_PACKAGE_haproxy is not set
 CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_ip6tables-mod-nat=y
