--- a/.github/workflows/360_T7_basic.yml
+++ b/.github/workflows/360_T7_basic.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: cmiot_ax18_basic
+name: 360_T7_basic
 
 on:
   repository_dispatch:
@@ -20,10 +20,10 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/sdf8057/ipq6000.git
-  REPO_BRANCH: main
+  REPO_URL: https://github.com/padavanonly/immortalwrtARM
+  REPO_BRANCH: mt7981
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: ./config/cmiot_ax18/cmiot_ax18_basic.config
+  CONFIG_FILE: ./config/cmiot_ax18/360_T7_basic.config
   DIY_P1_SH: ./custom/cmiot_ax18/basic/diy-part1.sh
   DIY_P2_SH: ./custom/cmiot_ax18/basic/diy-part2.sh
   UPLOAD_BIN_DIR: false
