--- a/.github/workflows/360_t7_basic.yml
+++ b/.github/workflows/360_t7_basic.yml
@@ -20,8 +20,8 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/padavanonly/immortalwrtARM
-  REPO_BRANCH: mt7981
+  REPO_URL: https://github.com/hanwckf/immortalwrt-mt798x
+  REPO_BRANCH: openwrt-21.02
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: ./config/cmiot_ax18/360_t7_basic.config
   DIY_P1_SH: ./custom/cmiot_ax18/basic/diy-part1.sh
