--- a/.github/workflows/360_t7_basic.yml
+++ b/.github/workflows/360_t7_basic.yml
@@ -155,9 +155,9 @@ jobs:
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       run: |
-        echo "release_tag::360_T7_basic_$(date +"%Y.%m.%d-%H%M")"
+        echo "release_tag:=360_t7_basic_$(date +"%Y.%m.%d-%H%M")"
         touch release.txt
-        echo "360_T7_basic firmware" >> release.txt
+        echo "360_t7_basic firmware" >> release.txt
         [ $UPLOAD_COWTRANSFER = true ] && echo "🔗 [Cowtransfer](${{ steps.cowtransfer.outputs.url }})" >> release.txt
         [ $UPLOAD_WETRANSFER = true ] && echo "🔗 [WeTransfer](${{ steps.wetransfer.outputs.url }})" >> release.txt
         echo "status=success" >>$GITHUB_OUTPUT
