--- a/.github/workflows/360_t7.yml
+++ b/.github/workflows/360_t7.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: cmiot_ax18_plus
+name: 360_t7
 
 on:
   repository_dispatch:
@@ -20,10 +20,10 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/8688Add/ipq6000.git
-  REPO_BRANCH: main
+  REPO_URL: https://github.com/padavanonly/immortalwrtARM
+  REPO_BRANCH: mt7986
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: ./config/cmiot_ax18/prowifi.config
+  CONFIG_FILE: ./config/cmiot_ax18/360_t7.config
   DIY_P1_SH: ./custom/cmiot_ax18/plus/diy-part1.sh
   DIY_P2_SH: ./custom/cmiot_ax18/plus/diy-part2.sh
   UPLOAD_BIN_DIR: false
