--- a/.github/workflows/360_t7.yml
+++ b/.github/workflows/360_t7.yml
@@ -139,7 +139,7 @@ jobs:
       id: release
       uses: ncipollo/release-action@v1
       with:
-        name: ${{ env.PRODUCT_NAME }}
+        name: ${{ env.DATE }} for ${{ env.PRODUCT_NAME }}
         allowUpdates: true
         tag: ${{ env.FILE_NAME }}
         commit: main
