--- a/.github/workflows/ipq6000.yml
+++ b/.github/workflows/ipq6000.yml
@@ -20,12 +20,12 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/sdf8057/ipq6000.git
+  REPO_URL: https://github.com/8688Add/ipq6000.git
   REPO_BRANCH: main
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: ./config/ipq6000.config
-  DIY_P1_SH: ./scripts/diy-part1.sh
-  DIY_P2_SH: ./scripts/diy-part2.sh
+  CONFIG_FILE: ./config/cmiot_ax18/ipq6000.config
+  DIY_P1_SH: ./custom/cmiot_ax18/basic/diy-part1.sh
+  DIY_P2_SH: ./custom/cmiot_ax18/basic/diy-part2.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
