--- a/.github/workflows/ipq6000.yml
+++ b/.github/workflows/ipq6000.yml
@@ -1,26 +1,13 @@
-#代码源自esir大神
 #=================================================
 # Description: Build OpenWrt using GitHub Actions
 # Lisence: MIT
-# Author: eSirPlayground
-# Youtube Channel: https://goo.gl/fvkdwm 
 #=================================================
 
 name: ipq6000-pro
 
-on: 
-  release:
-    types: [published]
-
-  #push:
-    #branches: 
-      #- master
-
-  schedule:
-    - cron: 0 20 1 * *
-  
-  watch:
-   types: [started]
+on:
+  repository_dispatch:
+  workflow_dispatch:
   
 
 jobs:
@@ -125,7 +112,7 @@ jobs:
     - name: Build firmware
       working-directory: ./openwrt
       run: |
-        make -j2 V=s
+        make -j$(nproc) || make -j1 || make -j1 V=s
 
     - name : Upload artifact
       uses: actions/upload-artifact@master
