--- a/config/redmi_ax6/redmi_ax6_wifi.config
+++ b/config/redmi_ax6/redmi_ax6_wifi.config
@@ -12,6 +12,7 @@ CONFIG_OPENVPN_openssl_ENABLE_SMALL=y
 CONFIG_PACKAGE_6in4=y
 CONFIG_PACKAGE_bash=y
 # CONFIG_PACKAGE_chinadns-ng is not set
+CONFIG_PACKAGE_coremark=y
 CONFIG_PACKAGE_coreutils-nohup=y
 CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_ipt2socks=y
