--- a/.github/workflows/ipq6000_5.15.yml
+++ b/.github/workflows/ipq6000_5.15.yml
@@ -122,7 +122,7 @@ jobs:
       if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
       run: |
         cd openwrt/bin/targets/*/*
-        rm -rf packages profiles.json
+        rm -rf packages profiles.json sha256sums
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "status=success" >>$GITHUB_OUTPUT
 
