--- a/5.15.config
+++ b/5.15.config
@@ -1,6 +1,9 @@
 CONFIG_TARGET_ipq60xx=y
 CONFIG_TARGET_ipq60xx_generic=y
 CONFIG_TARGET_ipq60xx_generic_Default=y
+CONFIG_PACKAGE_autocore-arm=y
+CONFIG_PACKAGE_coremark=y
+CONFIG_PACKAGE_htop=y
 # CONFIG_PACKAGE_luci-app-alist is not set
 # CONFIG_PACKAGE_luci-app-aliyundrive-webdav is not set
 # CONFIG_PACKAGE_luci-app-bypass=y
