--- a/.github/workflows/h3c-nx30pro.yml
+++ b/.github/workflows/h3c-nx30pro.yml
@@ -122,7 +122,7 @@ jobs:
       if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
       run: |
         cd openwrt/bin/targets/*/*
-        rm -rf packages profiles.json sha256sums version.buildinfo immortalwrt-ipq60xx-generic-cmiot_ax18-initramfs-fit-uImage.itb immortalwrt-ipq60xx-generic-cmiot_ax18.manifest 
+        rm -rf packages profiles.json sha256sums version.buildinfo
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "status=success" >>$GITHUB_OUTPUT
 
@@ -155,9 +155,9 @@ jobs:
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       run: |
-        echo "release_tag=ipq6000_5.15_$(date +"%Y.%m.%d-%H%M")" >>$GITHUB_OUTPUT
+        echo "release_tag=h3c-nx30pro_$(date +"%Y.%m.%d-%H%M")" >>$GITHUB_OUTPUT
         touch release.txt
-        echo "ipq6000_5.15 firmware" >> release.txt
+        echo "h3c-nx30pro firmware" >> release.txt
         [ $UPLOAD_COWTRANSFER = true ] && echo "🔗 [Cowtransfer](${{ steps.cowtransfer.outputs.url }})" >> release.txt
         [ $UPLOAD_WETRANSFER = true ] && echo "🔗 [WeTransfer](${{ steps.wetransfer.outputs.url }})" >> release.txt
         echo "status=success" >>$GITHUB_OUTPUT
