--- a/.github/workflows/IPQ807X-WIFI.yml
+++ b/.github/workflows/IPQ807X-WIFI.yml
@@ -20,7 +20,7 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/breeze303/openwrt.git
+  REPO_URL: https://github.com/qosmio/openwrt-ipq
   REPO_BRANCH: main
   CONFIG_FILE: config/ipq807x-wifi.config
   PATCHES_FILE_1: patches/0001-show-soc-status-on-luci.patch
